[b1bb9ceb91e28534c56e13262bcfed009bc8851a]: Update 2019-07-10-solucao-omni.md

--- a/manual/solucao-omni.html
+++ b/manual/solucao-omni.html
@@ -391,7 +391,7 @@
       <td>String</td>
       <td>—</td>
       <td>Sim</td>
-      <td>Enum: <code class="highlighter-rouge">Typed</code> <code class="highlighter-rouge">MagStripe</code> <code class="highlighter-rouge">Emv</code> <br />Identificação do modo de captura do cartão na transação. Essa informação deve ser obtida através do retorno da função PP_GetCard da BC. <br />“00” – Magnético <br />“01” - Moedeiro VISA Cash sobre TIBC v1 <br />“02” - Moedeiro VISA Cash sobre TIBC v3 <br />“03” – EMV com contato <br />“04” - Easy-Entry sobre TIBC v1 <br />“05” - Chip sem contato simulando tarja “06” - EMV sem contato.</td>
+      <td>Enum: <code class="highlighter-rouge">Typed</code> <code class="highlighter-rouge">MagStripe</code> <code class="highlighter-rouge">Emv</code> <br />Identificação do modo de captura do cartão na transação. Essa informação deve ser obtida através do retorno da função PP_GetCard da BC. <br />“00” – Magnético <br />“01” - Moedeiro VISA Cash sobre TIBC v1 <br />“02” - Moedeiro VISA Cash sobre TIBC v3 <br />“03” – EMV com contato <br />“04” - Easy-Entry sobre TIBC v1 <br />“05” - Chip sem contato simulando tarja <br /> “06” - EMV sem contato.</td>
     </tr>
     <tr>
       <td><code class="highlighter-rouge">CreditCard.AuthenticationMethod</code></td>
@@ -611,7 +611,7 @@
       <td>String</td>
       <td>—</td>
       <td>Sim</td>
-      <td>Enum: <code class="highlighter-rouge">Typed</code> <code class="highlighter-rouge">MagStripe</code> <code class="highlighter-rouge">Emv</code> <br />Identificação do modo de captura do cartão na transação. Essa informação deve ser obtida através do retorno da função PP_GetCard da BC. <br />“00” – Magnético <br />“01” - Moedeiro VISA Cash sobre TIBC v1 <br />“02” - Moedeiro VISA Cash sobre TIBC v3 <br />“03” – EMV com contato <br />“04” - Easy-Entry sobre TIBC v1 <br />“05” - Chip sem contato simulando tarja “06” - EMV sem contato.</td>
+      <td>Enum: <code class="highlighter-rouge">Typed</code> <code class="highlighter-rouge">MagStripe</code> <code class="highlighter-rouge">Emv</code> <br />Identificação do modo de captura do cartão na transação. Essa informação deve ser obtida através do retorno da função PP_GetCard da BC. <br />“00” – Magnético <br />“01” - Moedeiro VISA Cash sobre TIBC v1 <br />“02” - Moedeiro VISA Cash sobre TIBC v3 <br />“03” – EMV com contato <br />“04” - Easy-Entry sobre TIBC v1 <br />“05” - Chip sem contato simulando tarja <br /> “06” - EMV sem contato.</td>
     </tr>
     <tr>
       <td><code class="highlighter-rouge">CreditCard.AuthenticationMethod</code></td>
@@ -962,7 +962,7 @@
       <td>String</td>
       <td>—</td>
       <td>Sim</td>
-      <td>Enum: <code class="highlighter-rouge">Typed</code> <code class="highlighter-rouge">MagStripe</code> <code class="highlighter-rouge">Emv</code> <br />Identificação do modo de captura do cartão na transação. Essa informação deve ser obtida através do retorno da função PP_GetCard da BC. <br />“00” – Magnético <br />“01” - Moedeiro VISA Cash sobre TIBC v1 <br />“02” - Moedeiro VISA Cash sobre TIBC v3 <br />“03” – EMV com contato <br />“04” - Easy-Entry sobre TIBC v1 <br />“05” - Chip sem contato simulando tarja “06” - EMV sem contato.</td>
+      <td>Enum: <code class="highlighter-rouge">Typed</code> <code class="highlighter-rouge">MagStripe</code> <code class="highlighter-rouge">Emv</code> <br />Identificação do modo de captura do cartão na transação. Essa informação deve ser obtida através do retorno da função PP_GetCard da BC. <br />“00” – Magnético <br />“01” - Moedeiro VISA Cash sobre TIBC v1 <br />“02” - Moedeiro VISA Cash sobre TIBC v3 <br />“03” – EMV com contato <br />“04” - Easy-Entry sobre TIBC v1 <br />“05” - Chip sem contato simulando tarja <br /> “06” - EMV sem contato.</td>
     </tr>
     <tr>
       <td><code class="highlighter-rouge">CreditCard.AuthenticationMethod</code></td>
@@ -1217,7 +1217,7 @@
       <td>String</td>
       <td>—</td>
       <td>Sim</td>
-      <td>Enum: <code class="highlighter-rouge">Typed</code> <code class="highlighter-rouge">MagStripe</code> <code class="highlighter-rouge">Emv</code> <br />Identificação do modo de captura do cartão na transação. Essa informação deve ser obtida através do retorno da função PP_GetCard da BC. <br />“00” – Magnético <br />“01” - Moedeiro VISA Cash sobre TIBC v1 <br />“02” - Moedeiro VISA Cash sobre TIBC v3 <br />“03” – EMV com contato <br />“04” - Easy-Entry sobre TIBC v1 <br />“05” - Chip sem contato simulando tarja “06” - EMV sem contato.</td>
+      <td>Enum: <code class="highlighter-rouge">Typed</code> <code class="highlighter-rouge">MagStripe</code> <code class="highlighter-rouge">Emv</code> <br />Identificação do modo de captura do cartão na transação. Essa informação deve ser obtida através do retorno da função PP_GetCard da BC. <br />“00” – Magnético <br />“01” - Moedeiro VISA Cash sobre TIBC v1 <br />“02” - Moedeiro VISA Cash sobre TIBC v3 <br />“03” – EMV com contato <br />“04” - Easy-Entry sobre TIBC v1 <br />“05” - Chip sem contato simulando tarja <br /> “06” - EMV sem contato.</td>
     </tr>
     <tr>
       <td><code class="highlighter-rouge">CreditCard.AuthenticationMethod</code></td>
@@ -2148,7 +2148,7 @@
       <td>String</td>
       <td>—</td>
       <td>Sim</td>
-      <td>Enum: <code class="highlighter-rouge">Typed</code> <code class="highlighter-rouge">MagStripe</code> <code class="highlighter-rouge">Emv</code> <br />Identificação do modo de captura do cartão na transação. Essa informação deve ser obtida através do retorno da função PP_GetCard da BC. <br />“00” – Magnético <br />“01” - Moedeiro VISA Cash sobre TIBC v1 <br />“02” - Moedeiro VISA Cash sobre TIBC v3 <br />“03” – EMV com contato <br />“04” - Easy-Entry sobre TIBC v1 <br />“05” - Chip sem contato simulando tarja “06” - EMV sem contato.</td>
+      <td>Enum: <code class="highlighter-rouge">Typed</code> <code class="highlighter-rouge">MagStripe</code> <code class="highlighter-rouge">Emv</code> <br />Identificação do modo de captura do cartão na transação. Essa informação deve ser obtida através do retorno da função PP_GetCard da BC. <br />“00” – Magnético <br />“01” - Moedeiro VISA Cash sobre TIBC v1 <br />“02” - Moedeiro VISA Cash sobre TIBC v3 <br />“03” – EMV com contato <br />“04” - Easy-Entry sobre TIBC v1 <br />“05” - Chip sem contato simulando tarja <br /> “06” - EMV sem contato.</td>
     </tr>
     <tr>
       <td><code class="highlighter-rouge">CreditCard.AuthenticationMethod</code></td>
@@ -2396,7 +2396,7 @@
       <td>String</td>
       <td>—</td>
       <td>Sim</td>
-      <td>Enum: <code class="highlighter-rouge">Typed</code> <code class="highlighter-rouge">MagStripe</code> <code class="highlighter-rouge">Emv</code> <br />Identificação do modo de captura do cartão na transação. Essa informação deve ser obtida através do retorno da função PP_GetCard da BC. <br />“00” – Magnético <br />“01” - Moedeiro VISA Cash sobre TIBC v1 <br />“02” - Moedeiro VISA Cash sobre TIBC v3 <br />“03” – EMV com contato <br />“04” - Easy-Entry sobre TIBC v1 <br />“05” - Chip sem contato simulando tarja “06” - EMV sem contato.</td>
+      <td>Enum: <code class="highlighter-rouge">Typed</code> <code class="highlighter-rouge">MagStripe</code> <code class="highlighter-rouge">Emv</code> <br />Identificação do modo de captura do cartão na transação. Essa informação deve ser obtida através do retorno da função PP_GetCard da BC. <br />“00” – Magnético <br />“01” - Moedeiro VISA Cash sobre TIBC v1 <br />“02” - Moedeiro VISA Cash sobre TIBC v3 <br />“03” – EMV com contato <br />“04” - Easy-Entry sobre TIBC v1 <br />“05” - Chip sem contato simulando tarja <br /> “06” - EMV sem contato.</td>
     </tr>
     <tr>
       <td><code class="highlighter-rouge">CreditCard.AuthenticationMethod</code></td>
