[a37b57770ddc6c7dace8a8af7f4e2fd8f44016bf]: Update 2019-07-10-solucao-omni.md

--- a/en/manual/solucao-omni.html
+++ b/en/manual/solucao-omni.html
@@ -328,7 +328,7 @@
       <td>Integer</td>
       <td>—</td>
       <td>—</td>
-      <td>Default: 1 / Quantidade de Parcelas: Varia de 2 a 99 para transação de financiamento. Deve ser verificado os atributos maxOfPayments1, maxOfPayments2, maxOfPayments3 e minValOfPayments da tabela productTable.</td>
+      <td>Default: 1 / Number of Installments: Ranges from 2 to 99 for financing transaction. The attributes maxOfPayments1, maxOfPayments2, maxOfPayments3, and minValOfPayments of the productTable table must be checked.</td>
     </tr>
     <tr>
       <td><code class="highlighter-rouge">Payment.Interest</code></td>
@@ -562,7 +562,7 @@
       <td>Integer</td>
       <td>—</td>
       <td>—</td>
-      <td>Default: 1 / Quantidade de Parcelas: Varia de 2 a 99 para transação de financiamento. Deve ser verificado os atributos maxOfPayments1, maxOfPayments2, maxOfPayments3 e minValOfPayments da tabela productTable.</td>
+      <td>Default: 1 / Number of Installments: Ranges from 2 to 99 for financing transaction. The attributes maxOfPayments1, maxOfPayments2, maxOfPayments3, and minValOfPayments of the productTable table must be checked.</td>
     </tr>
     <tr>
       <td><code class="highlighter-rouge">Payment.Interest</code></td>
@@ -913,7 +913,7 @@
       <td>Integer</td>
       <td>—</td>
       <td>—</td>
-      <td>Default: 1 / Quantidade de Parcelas: Varia de 2 a 99 para transação de financiamento. Deve ser verificado os atributos maxOfPayments1, maxOfPayments2, maxOfPayments3 e minValOfPayments da tabela productTable.</td>
+      <td>Default: 1 / Number of Installments: Ranges from 2 to 99 for financing transaction. The attributes maxOfPayments1, maxOfPayments2, maxOfPayments3, and minValOfPayments of the productTable table must be checked.</td>
     </tr>
     <tr>
       <td><code class="highlighter-rouge">Payment.Interest</code></td>
@@ -1168,7 +1168,7 @@
       <td>Integer</td>
       <td>—</td>
       <td>—</td>
-      <td>Default: 1 / Quantidade de Parcelas: Varia de 2 a 99 para transação de financiamento. Deve ser verificado os atributos maxOfPayments1, maxOfPayments2, maxOfPayments3 e minValOfPayments da tabela productTable.</td>
+      <td>Default: 1 / Number of Installments: Ranges from 2 to 99 for financing transaction. The attributes maxOfPayments1, maxOfPayments2, maxOfPayments3, and minValOfPayments of the productTable table must be checked.</td>
     </tr>
     <tr>
       <td><code class="highlighter-rouge">Payment.Interest</code></td>
@@ -1757,7 +1757,7 @@
       <td>Integer</td>
       <td>—</td>
       <td>—</td>
-      <td>Default: 1 / Quantidade de Parcelas: Varia de 2 a 99 para transação de financiamento. Deve ser verificado os atributos maxOfPayments1, maxOfPayments2, maxOfPayments3 e minValOfPayments da tabela productTable.</td>
+      <td>Default: 1 / Number of Installments: Ranges from 2 to 99 for financing transaction. The attributes maxOfPayments1, maxOfPayments2, maxOfPayments3, and minValOfPayments of the productTable table must be checked.</td>
     </tr>
     <tr>
       <td><code class="highlighter-rouge">Payment.Interest</code></td>
@@ -2099,7 +2099,7 @@
       <td>Integer</td>
       <td>—</td>
       <td>—</td>
-      <td>Default: 1 / Quantidade de Parcelas: Varia de 2 a 99 para transação de financiamento. Deve ser verificado os atributos maxOfPayments1, maxOfPayments2, maxOfPayments3 e minValOfPayments da tabela productTable.</td>
+      <td>Default: 1 / Number of Installments: Ranges from 2 to 99 for financing transaction. The attributes maxOfPayments1, maxOfPayments2, maxOfPayments3, and minValOfPayments of the productTable table must be checked.</td>
     </tr>
     <tr>
       <td><code class="highlighter-rouge">Payment.Interest</code></td>
@@ -2347,7 +2347,7 @@
       <td>Integer</td>
       <td>—</td>
       <td>—</td>
-      <td>Default: 1 / Quantidade de Parcelas: Varia de 2 a 99 para transação de financiamento. Deve ser verificado os atributos maxOfPayments1, maxOfPayments2, maxOfPayments3 e minValOfPayments da tabela productTable.</td>
+      <td>Default: 1 / Number of Installments: Ranges from 2 to 99 for financing transaction. The attributes maxOfPayments1, maxOfPayments2, maxOfPayments3, and minValOfPayments of the productTable table must be checked.</td>
     </tr>
     <tr>
       <td><code class="highlighter-rouge">Payment.Interest</code></td>
@@ -2920,7 +2920,7 @@
       <td>Integer</td>
       <td>—</td>
       <td>—</td>
-      <td>Default: 1 / Quantidade de Parcelas: Varia de 2 a 99 para transação de financiamento. Deve ser verificado os atributos maxOfPayments1, maxOfPayments2, maxOfPayments3 e minValOfPayments da tabela productTable.</td>
+      <td>Default: 1 / Number of Installments: Ranges from 2 to 99 for financing transaction. The attributes maxOfPayments1, maxOfPayments2, maxOfPayments3, and minValOfPayments of the productTable table must be checked.</td>
     </tr>
     <tr>
       <td><code class="highlighter-rouge">Payment.Interest</code></td>
@@ -3493,7 +3493,7 @@
       <td>Integer</td>
       <td>—</td>
       <td>—</td>
-      <td>Default: 1 / Quantidade de Parcelas: Varia de 2 a 99 para transação de financiamento. Deve ser verificado os atributos maxOfPayments1, maxOfPayments2, maxOfPayments3 e minValOfPayments da tabela productTable.</td>
+      <td>Default: 1 / Number of Installments: Ranges from 2 to 99 for financing transaction. The attributes maxOfPayments1, maxOfPayments2, maxOfPayments3, and minValOfPayments of the productTable table must be checked.</td>
     </tr>
     <tr>
       <td><code class="highlighter-rouge">Payment.Interest</code></td>
