--- a/en/manual/solucao-omni.html
+++ b/en/manual/solucao-omni.html
@@ -1516,42 +1516,42 @@
       <td>String</td>
       <td>MM/yyyy</td>
       <td>Yes</td>
-      <td>Data de validade do cartão. <br />Dado obtido através do comando PP_GetCard na BC no momento da captura da transação.</td>
+      <td>Card Expiration Date <br />Data obtained through the command PP_GetCard in BC at the time of the transaction capture.</td>
     </tr>
     <tr>
       <td><code class="highlighter-rouge">CreditCard.SecurityCodeStatus</code></td>
       <td>String</td>
       <td>—</td>
       <td>—</td>
-      <td>Enum: <code class="highlighter-rouge">Collected</code> <code class="highlighter-rouge">Unreadable</code> <code class="highlighter-rouge">Nonexistent</code> <br /> Status da coleta de código de segurança (CVV)</td>
+      <td>Enum: <code class="highlighter-rouge">Collected</code> <code class="highlighter-rouge">Unreadable</code> <code class="highlighter-rouge">Nonexistent</code> <br /> Security code collection status (CVV)</td>
     </tr>
     <tr>
       <td><code class="highlighter-rouge">CreditCard.BrandId</code></td>
       <td>Integer</td>
       <td>—</td>
       <td>Yes</td>
-      <td>Identificação da bandeira obtida através do campo BrandId da PRODUCT TABLE.</td>
+      <td>Brand identification obtained through the BrandId field from the PRODUCT TABLE.</td>
     </tr>
     <tr>
       <td><code class="highlighter-rouge">CreditCard.IssuerId</code></td>
       <td>Integer</td>
       <td>—</td>
       <td>Yes</td>
-      <td>Código do emissor obtido através do campo IssuerId da BIN TABLE.</td>
+      <td>Issuer code obtained through IssuerId field from the BIN TABLE.</td>
     </tr>
     <tr>
       <td><code class="highlighter-rouge">CreditCard.InputMode</code></td>
       <td>String</td>
       <td>—</td>
       <td>Yes</td>
-      <td>Enum: <code class="highlighter-rouge">Typed</code> <code class="highlighter-rouge">MagStripe</code> <code class="highlighter-rouge">Emv</code> <br />Identificação do modo de captura do cartão na transação. Essa informação deve ser obtida através do retorno da função PP_GetCard da BC. <br />“00” – Magnético <br />“01” - Moedeiro VISA Cash sobre TIBC v1 <br />“02” - Moedeiro VISA Cash sobre TIBC v3 <br />“03” – EMV com contato <br />“04” - Easy-Entry sobre TIBC v1 <br />“05” - Chip sem contato simulando tarja <br /> “06” - EMV sem contato.</td>
+      <td>Enum: <code class="highlighter-rouge">Typed</code> <code class="highlighter-rouge">MagStripe</code> <code class="highlighter-rouge">Emv</code> <br />Identification of card capture mode in the transaction. This information must be obtained through the return of BC’s PP_GetCard function. <br /> “00” - Magnetic <br /> “01” - VISA Cash Coin on TIBC v1 <br /> “02” - VISA Cash Coin on TIBC v3 <br /> “03” - EMV with contact <br /> “04” - Easy Entry on TIBC v1 <br /> “05”- Contactless chip simulating the black stripe <br />  “06”- Contactless EMV.</td>
     </tr>
     <tr>
       <td><code class="highlighter-rouge">CreditCard.AuthenticationMethod</code></td>
       <td>String</td>
       <td>—</td>
       <td>Yes</td>
-      <td>Enum: <code class="highlighter-rouge">NoPassword</code> <code class="highlighter-rouge">OnlineAuthentication</code> <code class="highlighter-rouge">OfflineAuthentication</code> <br />Método de autenticação <br />- Se o cartão foi lido a partir da digitação verificar o bit 3 do atributo confParamOp04 das tabelas binTable, parameterTable e issuerTable. Se todos estiverem habilitados, a senha deve ser capturada e o authenticationMethod assume valor 2. Caso contrário, assume valor 1; <br />- Se o cartão foi lido a partir da trilha verificar o bit 3 do atributo confParamOp04 das tabelas binTable, parameterTable e issuerTable. Se todos estiverem habilitados, deve ser verificado o bit 2 do mesmo campo. Se este estiver com valor 1 deve ser capturada a senha. Se estiver com valor 0 a captura da senha vai depender do último dígito do service code; <br />- Se o cartão foi lido através do chip EMV, o authenticationMethod será preenchido com base no retorno da função PP_GoOnChip(). No resultado PP_GoOnChip(), onde se o campo da posição 003 do retorno da PP_GoOnChip() estiver com valor 1 indica que o pin foi validado off-line, o authenticationMethod será 3. Se o campo da posição 003 e o campo da posição 006 do retorno da PP_GoOnChip() estiverem com valor 0, o authenticationMethod será 1. Se o campo da posição 003 e o campo da posição 006 do retorno da PP_GoOnChip() estiverem com valores 0 e 1 respectivamente, o authenticationMethod será 2. <br />1 - Sem senha = “NoPassword”; <br />2 - Senha online = “Online Authentication”; <br />3 - Senha off-line = “Offline Authentication”.</td>
+      <td>Enum: <code class="highlighter-rouge">NoPassword</code> <code class="highlighter-rouge">OnlineAuthentication</code> <code class="highlighter-rouge">OfflineAuthentication</code> <br />Authentication method <br />- If the card was read from typing, check bit 3 of the confParamOp04 attribute of the binTable, parameterTable and issuerTable tables. If all are enabled, the password must be captured and authenticationMethod assumes value 2. Otherwise, assume value 1; <br />-If the card was read from the track, check bit 3 of the confParamOp04 attribute of the binTable, parameterTable and issuerTable tables. If all are enabled, then check bit 2 of the same field. If this value is 1, the password must be captured. If it is set to 0, password capture will depend on the last digit of the service code; <br />- If the card was read through the EMV chip, the authenticationMethod will be populated based on the return of the PP_GoOnChip function(). No resultado PP_GoOnChip(), where if the field of position 003 of the return from PP_GoOnChip () and if the position field 003 of the return from PP_GoOnChip() value 1 indicates the the pin has been validated offline, the authenticationMethod will be 3. If the position field 003 and the position field 006 of the return from PP_GoOnChip () are with the value set to 0, the authenticationMethod will be 1. If the position field 003 and the position field 006 of the return from PP_GoOnChip() are with values ​​0 and 1 respectively, the authenticationMethod will be 2. <br />1 - No password = “NoPassword”; <br />2 - Online password = “Online Authentication”; <br />3 - Offline password = “Offline Authentication”.</td>
     </tr>
     <tr>
       <td><code class="highlighter-rouge">DebitCard.TrackOneData</code></td>
