--- a/en/manual/solucao-omni.html
+++ b/en/manual/solucao-omni.html
@@ -1760,49 +1760,49 @@
       <td>Default: <code class="highlighter-rouge">ByMerchant</code> <br /> Enum: <code class="highlighter-rouge">ByMerchant</code> <code class="highlighter-rouge">ByIssuer</code> <br /> Installment Type: <br /> - If bit 6 of the confParamOp05 attribute present in the issuerTable and binTable tables and bit 6 of the confParamOp03 attribute of the productTable table are all enabled indicates that the interest-free installment type can be made. <br /> - If bit 7 of the confParamOp05 attribute, present in the issuerTable and binTable tables and bit 7 of the confParamOp03 attribute of the productTable table are all enabled, it indicates that the interest installment type can be made. No interest = “ByMerchant”; With interest = “ByIssuer”.</td>
     </tr>
     <tr>
-      <td><code class="highlighter-rouge">CreditCard.ExpirationDate</code></td>
+      <td><code class="highlighter-rouge">DebitCard.ExpirationDate</code></td>
       <td>String</td>
       <td>MM/yyyy</td>
       <td>Yes</td>
       <td>Card Expiration Date. <br />Data obtained through the command PP_GetCard in BC at the time of the transaction capture.</td>
     </tr>
     <tr>
-      <td><code class="highlighter-rouge">CreditCard.BrandId</code></td>
+      <td><code class="highlighter-rouge">DebitCard.BrandId</code></td>
       <td>Integer</td>
       <td>—</td>
       <td>Yes</td>
       <td>Brand identification obtained through the BrandId field from the PRODUCT TABLE.</td>
     </tr>
     <tr>
-      <td><code class="highlighter-rouge">CreditCard.IssuerId</code></td>
+      <td><code class="highlighter-rouge">DebitCard.IssuerId</code></td>
       <td>Integer</td>
       <td>—</td>
       <td>Yes</td>
       <td>Issuer code obtained through IssuerId field from the BIN TABLE.</td>
     </tr>
     <tr>
-      <td><code class="highlighter-rouge">CreditCard.TruncateCardNumberWhenPrinting</code></td>
+      <td><code class="highlighter-rouge">DebitCard.TruncateCardNumberWhenPrinting</code></td>
       <td>Boolean</td>
       <td>—</td>
       <td>—</td>
       <td>Indicates whether the card number will be truncated at the time the voucher is printed. The capture solution must make this decision based on <code class="highlighter-rouge">confParamOp03</code> present in the BIN TABLE, PARAMETER TABLE and ISSUER TABLE tables.</td>
     </tr>
     <tr>
-      <td><code class="highlighter-rouge">CreditCard.InputMode</code></td>
+      <td><code class="highlighter-rouge">DebitCard.InputMode</code></td>
       <td>String</td>
       <td>—</td>
       <td>Yes</td>
       <td>Enum: <code class="highlighter-rouge">Typed</code> <code class="highlighter-rouge">MagStripe</code> <code class="highlighter-rouge">Emv</code> <br />Identification of card capture mode in the transaction. This information must be obtained through the return of BC’s PP_GetCard function. <br />“00” – Magnetic <br />“01” - VISA Cash Coin on TIBC v1 <br />“02” - VISA Cash Coin on TIBC v3 <br />“03” – EMV with contact <br />“04” - Easy Entry on TIBC v1 <br />“05” - Contactless chip simulating the black stripe <br /> “06” - Contactless EMV.</td>
     </tr>
     <tr>
-      <td><code class="highlighter-rouge">CreditCard.AuthenticationMethod</code></td>
+      <td><code class="highlighter-rouge">DebitCard.AuthenticationMethod</code></td>
       <td>String</td>
       <td>—</td>
       <td>Yes</td>
       <td>Enum: <code class="highlighter-rouge">NoPassword</code> <code class="highlighter-rouge">OnlineAuthentication</code> <code class="highlighter-rouge">OfflineAuthentication</code> <br />Authentication method <br />- If the card was read from typing, check bit 3 of the confParamOp04 attribute of the binTable, parameterTable and issuerTable tables. If all are enabled, the password must be captured and authenticationMethod assumes value 2. Otherwise, assume value 1; <br />-If the card was read from the track, check bit 3 of the confParamOp04 attribute of the binTable, parameterTable and issuerTable tables. If all are enabled, then check bit 2 of the same field. If this value is 1, the password must be captured. If it is set to 0, password capture will depend on the last digit of the service code; <br />- If the card was read through the EMV chip, the authenticationMethod will be populated based on the return of the PP_GoOnChip function(). No resultado PP_GoOnChip(), where if the field of position 003 of the return from PP_GoOnChip () and if the position field 003 of the return from PP_GoOnChip() value 1 indicates the the pin has been validated offline, the authenticationMethod will be 3. If the position field 003 and the position field 006 of the return from PP_GoOnChip () are with the value set to 0, the authenticationMethod will be 1. If the position field 003 and the position field 006 of the return from PP_GoOnChip() are with values ​​0 and 1 respectively, the authenticationMethod will be 2. <br />1 - No password = “NoPassword”; <br />2 - Online password = “Online Authentication”; <br />3 - Offline password = “Offline Authentication”.</td>
     </tr>
     <tr>
-      <td><code class="highlighter-rouge">CreditCard.EmvData</code></td>
+      <td><code class="highlighter-rouge">DebitCard.EmvData</code></td>
       <td>String</td>
       <td>—</td>
       <td>—</td>
@@ -1830,7 +1830,7 @@
       <td>—</td>
     </tr>
     <tr>
-      <td><code class="highlighter-rouge">CreditCard.PanSequenceNumber</code></td>
+      <td><code class="highlighter-rouge">DebitCard.PanSequenceNumber</code></td>
       <td>Number</td>
       <td>—</td>
       <td>—</td>
