[ba468f3e7b9334764215a3bbd00df7009c7992fd]: Update 2019-09-20-integracao-sdk-ios.md

--- a/en/index.html
+++ b/en/index.html
@@ -83,7 +83,7 @@
     <ul class="product-list">
     
         <li class="product">
-            <h2>3DS 2.0 Authentication -</h2>
+            <h2>3DS 2.0 Authentication</h2>
             
 
             <ul class="doc">
