--- a/404.html
+++ b/404.html
@@ -93,7 +93,7 @@
         </li>
     
         <li class="product">
-            <h2>Autenticação 3DS 2.0 -</h2>
+            <h2>Autenticação 3DS 2.0</h2>
             
 
             <ul class="doc">
