[093e8fb891a03248be844d524865c36d548477b8]: Update 2017-01-01-cielo-lio.md

--- a/manual/cielo-lio.html
+++ b/manual/cielo-lio.html
@@ -1255,6 +1255,10 @@ Segue abaixo a tabela com os dados mais relevantes existentes nesse mapa:</p>
                     <span class="o">.</span><span class="na">build</span><span class="o">();</span> 
 </code></pre></div></div>
 
+<blockquote>
+  <p><strong>Atenção:</strong> Os dados dos parâmetros EC e EMAIL são apenas exemplos e não deve ser utilizado em sua chamada. Para a utilização do EC na chamada, é necessário uma pré habilitação junto a Cielo, para o recebimento com MULTI-EC.</p>
+</blockquote>
+
 <table>
   <thead>
     <tr>
@@ -1432,6 +1436,10 @@ Assim que possuir a instância da Order, utilize o método abaixo passando os pa
                 <span class="o">.</span><span class="na">ec</span><span class="o">(</span><span class="s">"0000000000000003"</span><span class="o">)</span> <span class="cm">/* Opcional */</span>
                 <span class="o">.</span><span class="na">build</span><span class="o">();</span>
 </code></pre></div></div>
+
+<blockquote>
+  <p><strong>Atenção:</strong> O dado do parâmetro EC é apenas um exemplo e não deve ser utilizado em sua chamada. Para a utilização do EC na chamada de cancelamento, é necessário uma pré habilitação junto a Cielo.</p>
+</blockquote>
 
 <p>Abaixo é detalhado cada um dos parâmetros enviados no método:</p>
 
