[aabe76a1f4de071cbd88e24f29f4d4b212f55cc4]: Update 2003-03-03-cielo-ecommerce.md

--- a/manual/cielo-ecommerce.html
+++ b/manual/cielo-ecommerce.html
@@ -13439,7 +13439,7 @@ Dessa forma, quando uma transação com marcação de recorrente for submetida p
   </tbody>
 </table>
 
-<h2 id="tokenização-bandeira">Tokenização Bandeira</h2>
+<h2 id="tokenização-de-bandeira">Tokenização de Bandeira</h2>
 
 <p>Clientes que fazem tokenização do cartão junto com as bandeiras poderão enviar as informações para a Cielo no fluxo transacional.</p>
 
