[6588b3420d95b38413d7910825118567810d1319]: Update 2019-07-10-solucao-omni.md

--- a/manual/solucao-omni.html
+++ b/manual/solucao-omni.html
@@ -5638,7 +5638,7 @@
       <td>Booleano</td>
       <td>—</td>
       <td>—</td>
-      <td>olicita Código de Segurança para cartão digitado.</td>
+      <td>Solicita Código de Segurança para cartão digitado.</td>
     </tr>
     <tr>
       <td><code class="highlighter-rouge">Bins.RequiresTypingLast4Digits</code></td>
