[4ea1e722a2a68d5ef4cf5dee16b8317d4974ffe5]: Update 2019-07-10-solucao-omni.md

--- a/en/manual/solucao-omni.html
+++ b/en/manual/solucao-omni.html
@@ -5407,7 +5407,7 @@
       <td>String</td>
       <td>—</td>
       <td>—</td>
-      <td>Terminal tdentifier.</td>
+      <td>Terminal identifier.</td>
       <td> </td>
     </tr>
     <tr>
@@ -5663,7 +5663,7 @@
       <td>Boolean</td>
       <td>—</td>
       <td>—</td>
-      <td>Solicita Código de Segurança para cartão digitado.</td>
+      <td>Request security code for card typed.</td>
       <td> </td>
     </tr>
     <tr>
@@ -5671,7 +5671,7 @@
       <td>Boolean</td>
       <td>—</td>
       <td>—</td>
-      <td>Request security code for card typed.</td>
+      <td>Request the last 4 digits typed.</td>
       <td> </td>
     </tr>
     <tr>
@@ -6160,14 +6160,6 @@
       <td>—</td>
       <td>—</td>
       <td>Allows fallback if Chip read error.</td>
-      <td> </td>
-    </tr>
-    <tr>
-      <td><code class="highlighter-rouge">Parameters.AllowChargingMoedeiroFromCash</code></td>
-      <td>Boolean</td>
-      <td>—</td>
-      <td>—</td>
-      <td>Allows coin load from cash money.</td>
       <td> </td>
     </tr>
     <tr>
