--- a/manual/cielo-lio.html
+++ b/manual/cielo-lio.html
@@ -722,15 +722,15 @@ Adicione essa permissão ao <code class="highlighter-rouge">AndroidManifest.xml<
 <ul>
   <li>
     <p>Client-Id
-Identificação de acesso. Sua geração ocorre no momento da criação pelo painel do desenvolvedor. Seu valor pode ser visualizado na coluna Client ID, dentro do menu <a href="https://desenvolvedores.cielo.com.br/api-portal/pt-br/myapps">‘Client ID Cadastrados’</a></p>
+Identificação de acesso. Sua geração ocorre no momento da criação pelo painel do desenvolvedor. Seu valor pode ser visualizado na coluna Client ID, dentro do menu <a href="https://desenvolvedores.cielo.com.br/api-portal/myapps">‘Client ID Cadastrados’</a></p>
   </li>
   <li>
     <p>Access-Token
-Identificação do token de acesso, que armazena as regras de acesso permitidas ao Client ID. Sua geração ocorre no momento da criação do Client ID pelo painel do desenvolvedor. Seu valor pode ser visualizado clicando em ‘detalhes’ na coluna ‘Access Tokens’, dentro do menu <a href="https://desenvolvedores.cielo.com.br/api-portal/pt-br/myapps">‘Client ID Cadastrados’</a></p>
+Identificação do token de acesso, que armazena as regras de acesso permitidas ao Client ID. Sua geração ocorre no momento da criação do Client ID pelo painel do desenvolvedor. Seu valor pode ser visualizado clicando em ‘detalhes’ na coluna ‘Access Tokens’, dentro do menu <a href="https://desenvolvedores.cielo.com.br/api-portal/myapps">‘Client ID Cadastrados’</a></p>
   </li>
 </ul>
 
-<p><a href="https://desenvolvedores.cielo.com.br/api-portal/pt-br/myapps/new">Crie sua Credencial para a API Local</a></p>
+<p><a href="https://desenvolvedores.cielo.com.br/api-portal/myapps/new">Crie sua Credencial para a API Local</a></p>
 
 <h2 id="criação-e-gerenciamento-de-ordens">Criação e Gerenciamento de Ordens</h2>
 
