[89a70d8773cad36f59d11124bd3a6a1aae7babb5]: Update 2017-01-01-cielo-lio.md

--- a/manual/cielo-lio.html
+++ b/manual/cielo-lio.html
@@ -2354,7 +2354,7 @@ modelos LIO v1 e LIO v2.</p>
     </tr>
     <tr>
       <td>number</td>
-      <td>Número</td>
+      <td>Texto</td>
       <td>Número Sequencial Único (NSU) da transação.</td>
       <td>Sim</td>
     </tr>
