[6bfe32f0af7ca3c1859bda2733106be8a27d036a]: Update 2017-01-01-cielo-lio.md

--- a/manual/cielo-lio.html
+++ b/manual/cielo-lio.html
@@ -1425,6 +1425,10 @@ As seguintes ações pode ser notificadas:
 
 <h3 id="cancelar-pagamento">Cancelar Pagamento</h3>
 
+<blockquote>
+  <p><strong>ATENÇÃO:</strong> Hoje só é possivel realizar o cancelamento total do pagamento, para realizar o cancelamento parcial é necessário utilizar a interface da LIO.</p>
+</blockquote>
+
 <p>No método Cancelar um Pagamento, é necessário ter salvo uma instância da Order que contém as informações da Order. Essa Order pode ser recuperada no sucesso do callback do pagamento ou usando o método de Listagem de Pedidos (Orders) (link para método). 
 Assim que possuir a instância da Order, utilize o método abaixo passando os parâmetros conforme o exemplo abaixo:</p>
 
